# UtilityLib

./: CMakeLists.txt  LICENSE  Readme.md
UtilityLib/: CMakeLists.txt
UtilityLib/Inc/: Error.hpp
UtilityLib/Inc/Containers/: Value.hpp  Variant.hpp
UtilityLib/Inc/Serialization/: Base64.hpp  Json.hpp  Utf8.hpp
UtilityLib/Src/: Error.cpp
UtilityLib/Src/Containers/: Value.cpp
UtilityLib/Src/Serialization/: Base64.cpp  Json.cpp  Utf8.cpp
UtilityLib/Test/: CMakeLists.txt  ErrorTest.cpp  Main.cpp
UtilityLib/Test/Containers/: ValueTest.cpp  VariantTest.cpp
UtilityLib/Test/Serialization/: Base64Test.cpp  JsonTest.cpp  Utf8Test.cpp
